--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
-aiogram==2.25.1 psutil==5.9.5 speedtest-cli pyautogui PyQt5 requests gTTS pyttsx3 Pillow
+aiogram==2.25.1
+psutil==5.9.5
+speedtest-cli
+pyautogui
+PyQt5
+requests
+gTTS
+pyttsx3
+Pillow
+comtypes
+pycaw
+opencv-python
+numpy
+sounddevice
+soundfile
